# OpenVDBForUnity_HDRP

./: .gitignore  README.md
.github/workflows/: build.yml
OpenVDBForUnity/Assets/Common/: HDRenderPipelineAsset.asset  Volume.asset
OpenVDBForUnity/Assets/HDRPDefaultResources/: DefaultSettingsVolumeProfile.asset  HDRenderPipelineGlobalSettings.asset
OpenVDBForUnity/Assets/OpenVDB/Editor/Importer/: OpenVDBImporterEditor.cs
OpenVDBForUnity/Assets/OpenVDB/Shaders/: VDBVolumeRaymarching.hlsl  VolumeStandard.cginc  VolumeStandard.shader
OpenVDBForUnity/Assets/Scenes/: PostFx.asset  Test.unity
OpenVDBForUnity/Assets/Shaders/: LocalFog.shadergraph  New Material.mat  New Shader Graph.shadergraph  VDBVolume.shadergraph
OpenVDBForUnity/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
OpenVDBForUnity/UserSettings/: EditorUserSettings.asset
OpenVDBForUnity/UserSettings/Layouts/: default-2022.dwlt
Plugin/: CMakeLists.txt  vcpkg.json
Plugin/openvdbi/: CMakeLists.txt
Plugin/openvdbi/Importer/: oiVolume.cpp
